// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Route should render <PageNotFound /> 1`] = `
<DocumentFragment>
  <div
    class="layout-page-main"
  >
    <section
      class="layout-page-main__left"
    >
      <section
        class="layout-page-panel-menu"
      >
        <div
          class="layout-page-panel-menu__logo"
        >
          <span
            class="icon icon_name_logo icon_size_large"
          />
        </div>
        <div
          class="layout-page-panel-menu__menu"
        >
          <nav>
            <a
              class="menu-item"
              href="/some-servive-1"
              title="Сервис 1"
            />
            <a
              class="menu-item"
              href="/some-servive-2"
              title="Сервис 2"
            />
            <a
              class="menu-item"
              href="/some-servive-3"
              title="Сервис 3"
            />
            <a
              class="menu-item"
              href="/some-servive-4"
              title="Сервис 4"
            />
            <a
              class="menu-item"
              href="/services"
              title="Сервисы"
            />
            <a
              class="menu-item"
              href="/some-servive-5"
              title="Сервис 5"
            />
            <a
              class="menu-item"
              href="/some-servive-6"
              title="Сервис 6"
            />
          </nav>
        </div>
      </section>
    </section>
    <section
      class="layout-page-main__right"
    >
      <header>
        <div
          class="layout-page-header"
        />
      </header>
      <main
        class="layout-page-main__content"
      >
        Несуществующая страница
      </main>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Route should render <PageServices /> loaded 1`] = `
<DocumentFragment>
  <div
    class="layout-page-main"
  >
    <section
      class="layout-page-main__left"
    >
      <section
        class="layout-page-panel-menu"
      >
        <div
          class="layout-page-panel-menu__logo"
        >
          <span
            class="icon icon_name_logo icon_size_large"
          />
        </div>
        <div
          class="layout-page-panel-menu__menu"
        >
          <nav>
            <a
              class="menu-item"
              href="/some-servive-1"
              title="Сервис 1"
            />
            <a
              class="menu-item"
              href="/some-servive-2"
              title="Сервис 2"
            />
            <a
              class="menu-item"
              href="/some-servive-3"
              title="Сервис 3"
            />
            <a
              class="menu-item"
              href="/some-servive-4"
              title="Сервис 4"
            />
            <a
              class="menu-item menu-item_active"
              href="/services"
              title="Сервисы"
            />
            <a
              class="menu-item"
              href="/some-servive-5"
              title="Сервис 5"
            />
            <a
              class="menu-item"
              href="/some-servive-6"
              title="Сервис 6"
            />
          </nav>
        </div>
      </section>
    </section>
    <section
      class="layout-page-main__right"
    >
      <header>
        <div
          class="layout-page-header"
        />
      </header>
      <main
        class="layout-page-main__content"
      >
        <section
          class="services"
        >
          <h1
            class="services__title"
          >
            Сервисы
          </h1>
          <form
            class="services__filter"
          >
            Фильтр
            <div
              class="services__filter-controls"
            >
              <div
                class="services__input-filter"
              >
                <div
                  class="text-input"
                >
                  <input
                    class="text-input__input text-input__input_size_large"
                    value=""
                  />
                </div>
              </div>
              <div
                class="services__button-reset"
              >
                <button
                  class="button button_size_large button_disabled button_style_transparent"
                  disabled=""
                  type="submit"
                >
                  Сбросить
                </button>
              </div>
            </div>
          </form>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                Nethouse.ru
              </h3>
              <p
                class="service-item__description"
              >
                Конструктор сайтов
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://nethouse.ru/?p=travelpayouts"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                Appfollow.io
              </h3>
              <p
                class="service-item__description"
              >
                SDK
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="http://appfollow.io/+travelpayouts"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                Semrush.com
              </h3>
              <p
                class="service-item__description"
              >
                Анализ
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://www.semrush.com/sem/?ref=2016127405"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                logaster.ru
              </h3>
              <p
                class="service-item__description"
              >
                Логотип
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://www.logaster.ru/?utm_source=travelpayouts&utm_medium=Travelpayouts_market_25off&utm_content=banner&utm_campaign=Travelpayouts"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                reg.ru
              </h3>
              <p
                class="service-item__description"
              >
                SSL
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://www.reg.ru/ssl-certificate/?utm_source=travel&utm_campaign=travelssl&utm_medium=email"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                Seolib.ru 
              </h3>
              <p
                class="service-item__description"
              >
                Анализ
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://seolib.ru/info/monitoring_positions?utm_source=aviasales&utm_campaign=marketplace&utm_medium=cabinet&utm_content=bonus"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                lpgenerator.ru
              </h3>
              <p
                class="service-item__description"
              >
                Лидогенерация
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="http://lpgenerator.ru/?partner_id=c1b4cc"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                Majordomo.ru
              </h3>
              <p
                class="service-item__description"
              >
                Хостинг
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://www.majordomo.ru/?utm_source=travelpayouts"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                Setup.ru
              </h3>
              <p
                class="service-item__description"
              >
                Конструктор сайтов 2
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="http://www.setup.ru/instructions/promocode"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                umi.com
              </h3>
              <p
                class="service-item__description"
              >
                Конструктор сайтов 3
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="http://umi.ru/affiliate/?partner_id=3728"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                ukit.com
              </h3>
              <p
                class="service-item__description"
              >
                Конструктор сайтов
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpаyouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href=" https://ukit.com/ru?utm_source=aviasales&utm_medium=email&utm_campaign=ukit_aviasales"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                topvisor.com
              </h3>
              <p
                class="service-item__description"
              >
                Аналитика
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://topvisor.ru/promo/travelpayouts/?utm_source=travelpayouts"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                netology.ru
              </h3>
              <p
                class="service-item__description"
              />
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="http://netology.ru"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                seopult.ru
              </h3>
              <p
                class="service-item__description"
              >
                Продвижение сайта
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://promopult.ru/ref/0e279a2772d18ed5"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                sendpulse.com
              </h3>
              <p
                class="service-item__description"
              >
                Рассылка
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://sendpulse.com/ru/features/email?coupon=TRVL-PAY-OUTS&utm_source=travelpayouts&utm_medium=referral&utm_campaign=travelpayouts-coupon"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                Turbotext.ru
              </h3>
              <p
                class="service-item__description"
              >
                Биржа контента
              </p>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="http://turbotext.ru/promo/129/reg/?utm_source=travelpayouts"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                jivosite.ru
              </h3>
              <p
                class="service-item__description"
              >
                Чат
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://www.jivosite.ru/?utm_source=newsletter&utm_medium=email&utm_content=q1&utm_campaign=travelpayouts_gift_14_03_2017"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                Witget.com
              </h3>
              <p
                class="service-item__description"
              >
                Виджет
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://witget.com/?partner=travelpayouts"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                Spywords.ru
              </h3>
              <p
                class="service-item__description"
              >
                Анализ
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="http://spywords.ru?utm_source=travelpayouts&utm_medium=display&utm_campaign=partner_discount"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                Etxt.ru
              </h3>
              <p
                class="service-item__description"
              >
                Биржа контента
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://www.etxt.ru/?utm_source=promocode&utm_campaign=travelpayouts&utm_medium=cpa&utm_term=300&utm_content=280217"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                Roistat.com
              </h3>
              <p
                class="service-item__description"
              >
                Аналитика
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://cloud.roistat.com/user/register "
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                Serpstat.com
              </h3>
              <p
                class="service-item__description"
              >
                Анализ
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://serpstat.com/users/profile/?utm_medium=email&utm_source=travelpayouts"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                HideMy.name
              </h3>
              <p
                class="service-item__description"
              >
                VPN
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <button
                class="button button_size_large button_style_color"
              >
                Получить бонус
              </button>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                webhost1.ru
              </h3>
              <p
                class="service-item__description"
              >
                Хостинг
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://webhost1.ru/?utm_source=travelpayouts"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                Mail.Ru
              </h3>
              <p
                class="service-item__description"
              >
                Облако 
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://biz.mail.ru/?utm_source=travelpayout "
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                Unisender.com
              </h3>
              <p
                class="service-item__description"
              >
                Рассылка
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="https://www.unisender.com/ru/about/bonusy/bonus15?utm_source=travelpayouts&utm_medium=partners&utm_content=7&utm_campaign=email"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
          <div
            class="service-item"
          >
            <div
              class="service-item__name"
            >
              <h3
                class="service-item__title"
              >
                getuniq.me
              </h3>
              <p
                class="service-item__description"
              >
                Контекстная реклама
              </p>
            </div>
            <div
              class="service-item__promocode"
            >
              <span
                class="service-item__promocode-text"
              >
                Промокод
              </span>
              <div
                class="text-input"
              >
                <input
                  class="text-input__input text-input__input_size_large"
                  readonly=""
                  value="travelpayouts"
                />
                <div
                  class="text-input__icon"
                >
                  <span
                    class="icon icon_name_copy icon_size_small"
                  />
                </div>
              </div>
            </div>
            <div
              class="service-item__link"
            >
              <a
                class="button button_size_large button_full-width button_style_color"
                href="http://travelpayouts.getuniq.me"
                rel="nofollow noopener"
                target="_blank"
              >
                Получить бонус
              </a>
            </div>
          </div>
        </section>
      </main>
    </section>
  </div>
</DocumentFragment>
`;

exports[`Route should render <PageServices /> loading 1`] = `
<DocumentFragment>
  <div
    class="layout-page-main"
  >
    <section
      class="layout-page-main__left"
    >
      <section
        class="layout-page-panel-menu"
      >
        <div
          class="layout-page-panel-menu__logo"
        >
          <span
            class="icon icon_name_logo icon_size_large"
          />
        </div>
        <div
          class="layout-page-panel-menu__menu"
        >
          <nav>
            <a
              class="menu-item"
              href="/some-servive-1"
              title="Сервис 1"
            />
            <a
              class="menu-item"
              href="/some-servive-2"
              title="Сервис 2"
            />
            <a
              class="menu-item"
              href="/some-servive-3"
              title="Сервис 3"
            />
            <a
              class="menu-item"
              href="/some-servive-4"
              title="Сервис 4"
            />
            <a
              class="menu-item menu-item_active"
              href="/services"
              title="Сервисы"
            />
            <a
              class="menu-item"
              href="/some-servive-5"
              title="Сервис 5"
            />
            <a
              class="menu-item"
              href="/some-servive-6"
              title="Сервис 6"
            />
          </nav>
        </div>
      </section>
    </section>
    <section
      class="layout-page-main__right"
    >
      <header>
        <div
          class="layout-page-header"
        />
      </header>
      <main
        class="layout-page-main__content"
      >
        <section
          class="services"
        >
          <h1
            class="services__title"
          >
            Сервисы
          </h1>
          <form
            class="services__filter"
          >
            Фильтр
            <div
              class="services__filter-controls"
            >
              <div
                class="services__input-filter"
              >
                <div
                  class="text-input"
                >
                  <input
                    class="text-input__input text-input__input_size_large"
                    disabled=""
                    value=""
                  />
                </div>
              </div>
              <div
                class="services__button-reset"
              >
                <button
                  class="button button_size_large button_disabled button_style_transparent"
                  disabled=""
                  type="submit"
                >
                  Сбросить
                </button>
              </div>
            </div>
          </form>
          <div
            class="services__spinner"
          >
            <div
              class="spinner spinner_size_large"
            >
              <div
                class="spinner__inner"
              />
            </div>
          </div>
        </section>
      </main>
    </section>
  </div>
</DocumentFragment>
`;
